Details
-
Bug
-
Resolution: Fixed
-
Critical
-
unhidden by (but not guilty) 0.4.15-dev-3004-gbd6fb80 https://github.com/reactos/reactos/commit/bd6fb80867fc9ac5f7216f8695803d16d1de9ee9
Description
ReactOS 0.4.15-x86-dev (Build 20220314-0.4.15-dev-3900-gd3f3a97)
(thanks to julenuri for indicating the executable: https://github.com/marciowb/Meus-Projetos/blob/master/componentes/DevExpress%20VCL/ExpressLibrary/cxLocalizerEditor.exe)
When testing for the issue of missing black icons in toolbar- I found an unrelated issue (attached log)
When [IntLinkHwnd / IntLinkWindow] fails with:
(win32ss/user/ntuser/window.c:1030) err: IntLinkHwnd -- Trying to link window 0xBC65DAA0 to itself!! |
(win32ss/user/ntuser/window.c:927) err: IntLinkWindow -- Trying to link window 0xBC65DAA0 to itself!! |
The child window is rendered unrelaed to itself. But when you try to dismiss it, the deallocation page faults and it results in a BSOD:
*** Fatal System Error: 0x00000050 (0xFEEEFF36,0x00000000,0xF66FD4A5,0x00000000) |
Driver at fault:*** win32k.sys - Address F66FD4A5 base at F66B5000, DateStamp 6247350a.Entered debugger on embedded INT3 at 0x0008:0x8058B517.kdb:> btEip:<ntoskrnl.exe:18b518 (C:\Users\VISLOMB1\reactos\reactos\mybuild/../sdk/lib/rtl/i386/debug_asm.S:56 (RtlpBreakWithStatusInstruction))>Frames:<ntoskrnl.exe:8c31d (ntoskrnl/ke/bug.c:1066 (KeBugCheckWithTf))><ntoskrnl.exe:8c887 (ntoskrnl/ke/bug.c:1413 (KeBugCheckEx))><ntoskrnl.exe:bbba8 (ntoskrnl/mm/ARM3/pagfault.c:2053 (MmArmAccessFault))><ntoskrnl.exe:f2830 (ntoskrnl/mm/mmfault.c:251 (MmAccessFault))><ntoskrnl.exe:14d638 (ntoskrnl/ke/i386/traphdlr.c:1369 (KiTrap0EHandler))><ntoskrnl.exe:36ae (:0 (KiTrap0E))><win32k.sys:484a0 (win32ss/user/ntuser/input.c:489 (UserAttachThreadInput))><win32k.sys:88824 (win32ss/user/ntuser/window.c:2946 (NtUserDestroyWindow))><ntoskrnl.exe:3fe5 (:0 (KiSystemCallTrampoline))><ntoskrnl.exe:14e4d5 (ntoskrnl/ke/i386/traphdlr.c:1840 (KiSystemServiceHandler))><ntoskrnl.exe:3e2f (:0 (KiFastCallEntry))><ntdll.dll:10181><cxLocalizerEditor.exe:8af74> |
You can reproduce it by clicking on the toolbar's down arrow to extend the options --> it shows "Add or Remove Buttons" --> when clicking outside the window --> BSOD
(I'll try to find a tentative fix soon)
Attachments
Issue Links
- relates to
-
CORE-18143 BSOD 0x50 when running regression test for user32_winetest:win
-
- Resolved
-