[NTUSER] Fix 'Trying to link windows to itself' (#4478) CORE-18132

Fix 'Trying to link windows to itself' on DestroyWindow. Patch by I_Kill_Bugs.
This fixes a potential BSOD 0x50 observable in the app Localizer Editor"